Fix Contact header spacing for large size

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -602,6 +602,9 @@ h1 {
         align-items: baseline;
         margin: 0.7rem 0 3rem;
     }
+    .contact-info div:first-child {
+        flex: 0.5;
+    }
     .contact-info div {
         flex: 1;
     }
